--- a/Responsive-Portfolio/contact.html
+++ b/Responsive-Portfolio/contact.html
@@ -18,8 +18,8 @@
             </div>
         </header>   
 
-        <section id="main-area">
-            <aside>
+        <section id="main-area-wrapper">
+            <aside id="main-area">
                 <h1 >Contact</h1>
                 
                 <hr>
