--- a/Responsive-Portfolio/index.html
+++ b/Responsive-Portfolio/index.html
@@ -18,8 +18,8 @@
 			</div>
 		</header>	
 
-		<section id="main-area">
-			<aside>
+		<section id="main-area-wrapper">
+			<aside id="main-area">
 				<h1>About Me</h1>
 				
 				<hr>
@@ -38,7 +38,7 @@
 
 			    <hr>
 
-			    <div>
+			    <div class=social-icons>
 				     <a id="social-icon1" href="https://github.com/Hanasandy/Basic-Portfolio" target="_blank"><img src="assets/images/1485741496_github_square_black.svg" alt="GitHub"　width="auto" height="auto">
                      </a>  
                      <a id="social-icon2" href="https://www.linkedin.com/in/heidi-tochigi-1b5031134?trk=hp-identity-name" target="_blank"><img src="assets/images/1485741544_linkedin_square_color.svg" alt="Linkedin"　width="auto" height="auto">
