--- a/Responsive-Portfolio/portfolio.html
+++ b/Responsive-Portfolio/portfolio.html
@@ -18,8 +18,8 @@
             </div>
         </header>
 
-        <section id="main-area">
-            <aside id="portfolio">
+        <section id="main-area-wrapper">
+            <aside id="main-area">
                 <h1 >Portfolio</h1>
                 
                 <hr>
