index.html added

--- a/Bootstrap-Portfolio/index.html
+++ b/Bootstrap-Portfolio/index.html
@@ -4,55 +4,73 @@
 	<title>About Me</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<meta mane="viewpoint" content="width=device-with, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/stickyfooter.css">
 
 </head>
 <body>
-<body>
+<body class="wrapper">
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Your Name</a>
+        <h1>Heidi Tochigi</h1>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+          <li><a href="index.html">About</a></li> 
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul> 
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container main">
     <div class="row">
       <div class="col-md-8">
-        <div class="page-header">
-          <h1>About Me</h1>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
-            <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
+        <div class="about-me-container">
+          <div class="page-header">
+            <h1>About Me</h1>
           </div>
-          <div class="col-md-9">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique, nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae felis vulputate pretium. Nullam commodo, est ac auctor ornare,
-              eros nisi fringilla sem, non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus, luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et neque fringilla ultricies. Aenean
-              at feugiat elit, a posuere justo. Pellentesque egestas dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id posuere sem congue a.
-            </p>
+          <div class="row">
+            <div class="col-md-3">
+              <div class="header-image">
+                <img src="assets/images/IMG_5705.JPG" alt="Heidi Tochigi"　width="350" height="250" align="left">
+              </div>
+            </div>  
+            <div class="col-md-9">
+              <p>
+                Heidi Tochigi has eaten her way around the world, having lived in a variety of fun food locations, including Tokyo, Yokohama, Oslo, WashingtonDC, Los Angeles and now she resides in Atlanta. She dedicated her fist part of her life exploring American History. After she finished her doctorate program, she moved to US and challenged her self working at marketing agency in Los Angeles. since 2015, she moved to Atlanta and 
+              </p>
+                         
+              <p>
+               Besides her love for American History and coding, Heidi loves cooking and her dogs (especially the ones with short nose and black/white hair, yes, Boston Terriers!). She believes to celebrate kind people with good food, great conversation. Her life have always been about love, family, friends and sharing. Connecting with people through food, sharing stories and supporting one another to live our dreams is what inspires her life. 
+              </p>
+            </div>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Panel</h3>
+            <h3 class="panel-title">Connect with Me</h3>
           </div>
           <div class="panel-body">
-            Panel content
+            <a id="social-icon1" href="https://github.com/Hanasandy/Basic-Portfolio" target="_blank"><img src="assets/images/1485741496_github_square_black.svg" alt="GitHub"　width="auto" height="auto">
+            </a>  
+            <a id="social-icon2" href="https://www.linkedin.com/in/heidi-tochigi-1b5031134?trk=hp-identity-name" target="_blank"><img src="assets/images/1485741544_linkedin_square_color.svg" alt="Linkedin"　width="auto" height="auto">
+            </a>
+            <a id="social-icon3" href="http://stackoverflow.com/users/7395842/h-tochigi" target="-blank"><img src="assets/images/1485741607_stackoverflow.png" alt="Stack Overflow"　width="59px" height="59px">
+             </a>
           </div>
         </div>
       </div>
     </div>
   </div>
+<footer class="footer">
+    <div class="container">
+      <p class="text-muted">&copy; Copyright 2017 Heidi Tochigi</p>
+    </div>
+</footer>
 
 </body>
 </html>
