--- a/Bootstrap-Portfolio/index.html
+++ b/Bootstrap-Portfolio/index.html
@@ -6,23 +6,27 @@
 	<meta mane="viewpoint" content="width=device-with, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="assets/css/stickyfooter.css">
-
 </head>
 <body>
-<body class="wrapper">
   <nav class="navbar navbar-default">
-    <div class="container">
       <div class="navbar-header">
-        <h1>Heidi Tochigi</h1>
+        <h1 class="navbar-brand" id="navbar-name">Heidi Tochigi</h1>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">About</a></li> 
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul> 
+      <div>
+           <button class="navbar-toggle" data-toggle="collapse" data-target=".target">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+       </div>
+
+      <div class="collapse navbar-collapse target">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul> 
       </div>
-    </div>
   </nav>
   <div class="container main">
     <div class="row">
@@ -34,12 +38,12 @@
           <div class="row">
             <div class="col-md-3">
               <div class="header-image">
-                <img src="assets/images/IMG_5705.JPG" alt="Heidi Tochigi"　width="350" height="250" align="left">
+                <img class="pull-left" src="assets/images/IMG_5705.JPG" alt="Heidi Tochigi"　width="350" height="250" align="left">
               </div>
             </div>  
             <div class="col-md-9">
               <p>
-                Heidi Tochigi has eaten her way around the world, having lived in a variety of fun food locations, including Tokyo, Yokohama, Oslo, WashingtonDC, Los Angeles and now she resides in Atlanta. She dedicated her fist part of her life exploring American History. After she finished her doctorate program, she moved to US and challenged her self working at marketing agency in Los Angeles. since 2015, she moved to Atlanta and 
+                Heidi Tochigi has eaten her way around the world, having lived in a variety of fun food locations, including Tokyo, Yokohama, Oslo, WashingtonDC, Los Angeles and now she resides in Atlanta. She dedicated her fist part of her life exploring American History. After she finished her doctorate program, she moved to US and challenged her self working at marketing agency in Los Angeles. since 2015, she moved to Atlanta.
               </p>
                          
               <p>
@@ -71,6 +75,11 @@
       <p class="text-muted">&copy; Copyright 2017 Heidi Tochigi</p>
     </div>
 </footer>
-
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
+
 </html>
