Glow to social icons is added

--- a/Bootstrap-Portfolio/contact.html
+++ b/Bootstrap-Portfolio/contact.html
@@ -64,11 +64,11 @@
                       </div>
                    <hr>   
                   <div class="panel-body">
-                    <a id="social-icon1" href="https://github.com/Hanasandy/Basic-Portfolio" target="_blank"><img src="assets/images/1485741496_github_square_black.svg" alt="GitHub"　width="auto" height="auto">
+                    <a class="hvr-grow" id="github" href="https://github.com/Hanasandy" target="_blank"><img src="assets/images/1485741496_github_square_black.svg" alt="GitHub"　width="auto" height="auto">
                     </a>
-                    <a id="social-icon2" href="https://www.linkedin.com/in/heidi-tochigi-1b5031134?trk=hp-identity-name" target="_blank"><img src="assets/images/1485741544_linkedin_square_color.svg" alt="Linkedin"　width="auto" height="auto">
+                    <a class="hvr-grow" id="linkedin" href="https://www.linkedin.com/in/heidi-tochigi-1b5031134?trk=hp-identity-name" target="_blank"><img src="assets/images/1485741544_linkedin_square_color.svg" alt="Linkedin"　width="auto" height="auto">
                     </a>
-                    <a id="social-icon3" href="http://stackoverflow.com/users/7395842/h-tochigi" target="-blank"><img src="assets/images/1485741607_stackoverflow.png" alt="Stack Overflow"　width="59px" height="59px">
+                    <a class="hvr-grow" id="stack-overflow" href="http://stackoverflow.com/users/7395842/h-tochigi" target="-blank"><img src="assets/images/1485741607_stackoverflow.png" alt="Stack Overflow"　width="59px" height="59px">
                     </a>
                   </div>
                 </div>
